examples/invalid/error_lexico_01.chs
nimais main() {
    cabal edad = 20
    chotear("Hola vos")
    @
}